--- a/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
+++ b/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
@@ -727,7 +727,7 @@ Bar plots are very commonly used in both ways (comparing counts and visualizing 
 
 ---
 
-##  {#stacked-bar data-menu-title="## Stacked Bar ##" background="#047C90"}
+##  {#stacked-bar-chart data-menu-title="## Stacked Bar ##" background="#047C90"}
 
 <div class="vertical-center">
 <center><div class = "custom-subtitle">Stacked bar charts</div></center>
@@ -780,7 +780,7 @@ sui_severity <- ca_region |>
 :::
 ::::
 
-```{r end-stacked-bar}
+```{r stacked-bar-countdown}
 countdown::countdown(
   minutes = 3,
   # left = 0, right = 0,
@@ -1119,7 +1119,7 @@ sbc_subbasin_monthly <- ca_region |>
 
 <hr>
 
-[Here, it makes sense to order the y-axis groups chronologically (Oct > Sep). If your grouping variable is not inherently chronological (e.g. if comparing water availability and consumption across different subbasins), a common approach is to order groups by a mean or max value. See this [archived version](ARCHIVE/SLIDES-amounts-rankings_jobs.qmd#dumbbell-plot-example){target="_blank"} of the lecture for an alternative dumbbell plot example where we order differently.]{.body-text-s}
+[Here, it makes sense to order the y-axis groups chronologically (Oct > Sep). If your grouping variable is not inherently chronological (e.g. if comparing water availability and consumption across different subbasins), a common approach is to order groups by a mean or max value. See this [archived version](ARCHIVE/SLIDES-amounts-rankings-jobs.qmd#dumbbell-plot-example){target="_blank"} of the lecture for an alternative dumbbell plot example where we order differently.]{.body-text-s}
 
 :::: {.columns}
 ::: {.column width="50%"}
