--- a/course-materials/lecture-slides/SLIDES-annotations.qmd
+++ b/course-materials/lecture-slides/SLIDES-annotations.qmd
@@ -1739,7 +1739,7 @@ ggplot(data = mono, aes(x = year, y = lake_level)) +
 
 - [the [`{ggtext}` package](https://wilkelab.org/ggtext/index.html){target="_blank"} includes two geoms for annotating plots, `geom_richtext()` & `geom_textbox()` -- both permit Markdown styling]{.body-text-s}
 
-- [the [`{ggforce}` package](https://ggforce.data-imaginist.com/){target="_blank"} has *so* many awesome functions, including a series of [annotation functions](https://ggforce.data-imaginist.com/reference/index.html#annotation){target="_blank"} (e.g. check out [`geom_mark_ellipse()`](https://ggforce.data-imaginist.com/reference/geom_mark_ellipse.html){target="_blank"}, demoed in [lecture 5.1](lecture5.1-good-viz-slides.qmd#ggforce){target="_blank"}), and [`facet_zoom()`](https://ggforce.data-imaginist.com/reference/facet_zoom.html){target="_blank"}, for zooming into a subset of data; [Tuo Wang](https://tuowang.rbind.io/){target="_blank"} also has some great examples in [this blog post](https://tuowang.rbind.io/blog/ggplot2-extensions/02-ggplot2-extensions/#3-span-stylecolor-coralggforcespan-package){target="_blank"}]{.body-text-s}
+- [the [`{ggforce}` package](https://ggforce.data-imaginist.com/){target="_blank"} has *so* many awesome functions, including a series of [annotation functions](https://ggforce.data-imaginist.com/reference/index.html#annotation){target="_blank"} (e.g. check out [`geom_mark_ellipse()`](https://ggforce.data-imaginist.com/reference/geom_mark_ellipse.html){target="_blank"}, demoed in the [what makes a good viz? slides](SLIDES-good-viz.qmd#ggforce){target="_blank"}), and [`facet_zoom()`](https://ggforce.data-imaginist.com/reference/facet_zoom.html){target="_blank"}, for zooming into a subset of data; [Tuo Wang](https://tuowang.rbind.io/){target="_blank"} also has some great examples in [this blog post](https://tuowang.rbind.io/blog/ggplot2-extensions/02-ggplot2-extensions/#3-span-stylecolor-coralggforcespan-package){target="_blank"}]{.body-text-s}
 
 [**Tutorials:**]{.body-text-m}
 
