--- a/course-materials/lecture-slides/SLIDES-choropleth.qmd
+++ b/course-materials/lecture-slides/SLIDES-choropleth.qmd
@@ -356,7 +356,7 @@ We've landed on a **diverging color palette**, but should we use a classed (aka 
 
 . . . 
 
-**Use a [classed]{.teal-text} color scale if you want to [communicate statistical brackets]{.teal-text}:** <img src="images/week5/classed.png" alt="A classed color scale with 5 binned colors ranging from dark green on the left to dark red on the right." style="display: inline-block; margin: 0; position: relative; top: 3px; width:80px;height:20px;"/>
+**Use a [classed]{.teal-text} color scale if you want to [communicate statistical brackets]{.teal-text}:** <img src="../images/lecture-slides/classed.png" alt="A classed color scale with 5 binned colors ranging from dark green on the left to dark red on the right." style="display: inline-block; margin: 0; position: relative; top: 3px; width:80px;height:20px;"/>
 
   - [the focus is on which data units fall into pre-defined classes, rather than overall pattern]{.body-text-s}
   - [best if you want you audience to read values (gets more difficult with more classes; easier with interactive visualizations)]{.body-text-s}
@@ -364,7 +364,7 @@ We've landed on a **diverging color palette**, but should we use a classed (aka 
 
 . . . 
 
-**Use an [unclassed]{.teal-text} color scale if you want to [show general patterns]{.teal-text}:** <img src="images/week5/unclassed.png" alt="An unclassed color scale with colors that smoothly transition from dark green on the left to dark red on the right." style="display: inline-block; margin: 0; position: relative; top: 3px; width:80px;height:20px;"/>
+**Use an [unclassed]{.teal-text} color scale if you want to [show general patterns]{.teal-text}:** <img src="../images/lecture-slides/unclassed.png" alt="An unclassed color scale with colors that smoothly transition from dark green on the left to dark red on the right." style="display: inline-block; margin: 0; position: relative; top: 3px; width:80px;height:20px;"/>
 
   - [the focus is on general patterns, rather than which statistical brackets regions fall into]{.body-text-s}
   - [best if you don't want to interpret for your reader -- it makes it easier to see outliers, transitions to and comparisons with neighboring regions]{.body-text-s}
@@ -417,7 +417,7 @@ For another great read on building color scales for choropleth maps, check out t
 
 <hr>
 
-Recall [from earlier](lecture5.2-colors-slides.qmd#climate-palettes){target="_blank"} that precipitation data is often encoded using a **brown / blue** color scheme (with drier conditions falling on the brown side and wetter conditions falling on the blue side). 
+Recall [from earlier](SLIDES-colors.qmd#climate-palettes){target="_blank"} that precipitation data is often encoded using a **brown / blue** color scheme (with drier conditions falling on the brown side and wetter conditions falling on the blue side). 
 
 Lucky for us, **RColorBrewer** has this exact palette. **Let's use [all 11 hues]{.teal-text} for our unclassed map**:
 
