--- a/course-materials/lecture-slides/SLIDES-distributions.qmd
+++ b/course-materials/lecture-slides/SLIDES-distributions.qmd
@@ -1137,7 +1137,7 @@ ggplot(mko_clean, aes(x = month_name, y = Temp_bot)) +
 ```
 
 ::: {.center-text .dark-blue-text}
-***What are the tradeoffs between reordering groups within a ggplot (as above) vs. during the data wrangling stage (e.g. as we did for our [histogram and density](distributions-slides.qmd#histogram-density-groupnum) and [ridgeline plots](distributions-slides.qmd#ggridges))?***
+***What are the tradeoffs between reordering groups within a ggplot (as above) vs. during the data wrangling stage (e.g. as we did for our [histogram and density](SLIDES-distributions.qmd#histogram-density-groupnum) and [ridgeline plots](SLIDES-distributions.qmd#ggridges))?***
 :::
 
 ---
