--- a/course-materials/lecture-slides/SLIDES-good-viz.qmd
+++ b/course-materials/lecture-slides/SLIDES-good-viz.qmd
@@ -807,7 +807,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ::::
 
 ::: {.footer}
-Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/histograms-density-plots.html){target="_blank"}, by Claus Wilke. For an example with code, check out [this slide](lecture2.2-distributions-slides.qmd#scaled-density){target="_blank"} from Lecture 2.2
+Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/histograms-density-plots.html){target="_blank"}, by Claus Wilke. For an example with code, check out [this slide](SLIDES-distributions.qmd#scaled-density){target="_blank"}.
 :::
 
 ---
@@ -953,7 +953,7 @@ Source: [The Billion Dollar O Gram](https://informationisbeautiful.net/visualiza
 
 <hr>
 
-Highlight data by coloring groups of interest either manually or by using helpful packages, like `{gghighlight}` (we saw an example of this in [lecture 2.3](lecture2.3-evolution-slides.qmd#spaghetti-plot){target="_blank"}):
+Highlight data by coloring groups of interest either manually or by using helpful packages, like `{gghighlight}` (we saw an example of this in the [visualizing evolution](SLIDES-evolution.qmd#spaghetti-plot){target="_blank"}):
 
 <br>
 
