--- a/course-materials/lecture-slides/SLIDES-relationships.qmd
+++ b/course-materials/lecture-slides/SLIDES-relationships.qmd
@@ -791,7 +791,7 @@ ggplot(stream_chem_data, aes(x = SO4, y = pH)) +
 
 <hr>
 
-These are the 2d equivalents to creating a density plot using `geom_density()` (see [week 3 materials](lecture2.2-distributions-slides.qmd){target="_blank"}).
+These are the 2d equivalents to creating a density plot using `geom_density()` (see the [visualizing distributions lecture](SLIDES-distributions.qmd){target="_blank"}).
 
 :::: {.columns}
 
