--- a/course-materials/keys/KEY-colors.qmd
+++ b/course-materials/keys/KEY-colors.qmd
@@ -7,7 +7,7 @@ toc: true
 ---
 
 ::: {.callout-note}
-This template follows [lecture 5.2 slides](../lecture-slides/lecture5.2-colors-slides.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
+This template follows the [colors lecture](../lecture-slides/SLIDES-colors.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
 :::
 
 ## Setup
