--- a/course-materials/keys/KEY-relationships.qmd
+++ b/course-materials/keys/KEY-relationships.qmd
@@ -9,7 +9,7 @@ toc: true
 [UPDATE: `stream_chem_data <- stream_chem_all$data` no longer works]
 
 ::: {.callout-note}
-This template follows [lecture 4.2 slides](../lecture-slides/lecture4.2-relationships-slides.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
+This template follows the [relationships lecture](../lecture-slides/SLIDES-relationships.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
 :::
 
 ## Setup
